Added CORS policy to app and table

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <script>
-    const apiEndpoint = 'http://localhost:8888/.netlify/functions/fetchOrder';
+    const apiEndpoint = 'https://steady-capybara-e18982.netlify.app/.netlify/functions/fetchOrder';
     const params = new URLSearchParams(window.location.search);
     const memberId = params.get('id');
 
