--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
         <option value="Pending">Pending</option>
         <option value="Processing">Processing</option>
         <option value="Completed">Completed</option>
+        <option value="Under review">Under Review</option>
       </select>
     </div>
 
-    <div class="overflow-x-auto">
+    <!-- Skeleton -->
+    <div id="skeletonLoader" class="space-y-2">
+      <div class="h-6 bg-gray-200 rounded w-full animate-pulse"></div>
+      <div class="h-6 bg-gray-200 rounded w-3/4 animate-pulse"></div>
+      <div class="h-6 bg-gray-200 rounded w-2/3 animate-pulse"></div>
+    </div>
+
+    <div class="overflow-x-auto hidden" id="tableWrapper">
       <table class="min-w-full bg-white shadow rounded-lg overflow-hidden">
         <thead class="bg-gray-200">
           <tr>
@@ -28,10 +36,20 @@
             <th class="text-left px-4 py-2">Caliber</th>
             <th class="text-left px-4 py-2">Quantity</th>
             <th class="text-left px-4 py-2">Status</th>
+            <th class="text-left px-4 py-2">Action</th>
           </tr>
         </thead>
         <tbody id="ordersTableBody"></tbody>
       </table>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div id="orderModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-white rounded-lg shadow-lg max-w-2xl w-full p-6 relative">
+      <button onclick="closeModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">&times;</button>
+      <h2 class="text-xl font-bold mb-4">Order Details</h2>
+      <div id="modalContent" class="space-y-2 text-sm"></div>
     </div>
   </div>
 
@@ -43,14 +61,41 @@
     const searchInput = document.getElementById('search');
     const statusFilter = document.getElementById('statusFilter');
     const tableBody = document.getElementById('ordersTableBody');
+    const modal = document.getElementById('orderModal');
+    const modalContent = document.getElementById('modalContent');
+    const skeleton = document.getElementById('skeletonLoader');
+    const tableWrapper = document.getElementById('tableWrapper');
 
     let allOrders = [];
+
+    function getStatusColor(status) {
+      switch (status) {
+        case 'Pending': return 'bg-yellow-100 text-yellow-800';
+        case 'Processing': return 'bg-blue-100 text-blue-800';
+        case 'Completed': return 'bg-green-100 text-green-800';
+        case 'Under review': return 'bg-gray-200 text-gray-800';
+        default: return 'bg-gray-200 text-gray-800';
+      }
+    }
+
+    function openModal(order) {
+      modalContent.innerHTML = '';
+      Object.entries(order).forEach(([key, value]) => {
+        modalContent.innerHTML += `<div><strong>${key}:</strong> ${value || '—'}</div>`;
+      });
+      modal.classList.remove('hidden');
+    }
+
+    function closeModal() {
+      modal.classList.add('hidden');
+    }
 
     function renderTable(data) {
       tableBody.innerHTML = '';
       data.forEach(order => {
         const row = document.createElement('tr');
-        row.className = 'border-t';
+        row.className = 'border-t hover:bg-gray-100 cursor-pointer';
+        const status = order.Status || "Under review";
 
         row.innerHTML = `
           <td class="px-4 py-2">${order.Name}</td>
@@ -59,41 +104,35 @@
           <td class="px-4 py-2">${order.Caliber}</td>
           <td class="px-4 py-2">${order.Quantity}</td>
           <td class="px-4 py-2">
-            <span class="inline-block px-2 py-1 text-xs font-semibold rounded-full ${getStatusColor(order.Status)}">
-              ${order.Status}
+            <span class="inline-block px-2 py-1 text-xs font-semibold rounded-full ${getStatusColor(status)}">
+              ${status}
             </span>
+          </td>
+          <td class="px-4 py-2">
+            <button class="text-blue-600 hover:underline" onclick='openModal(${JSON.stringify(order)})'>View</button>
           </td>
         `;
         tableBody.appendChild(row);
       });
     }
 
-    function getStatusColor(status) {
-      switch (status) {
-        case 'Pending': return 'bg-yellow-100 text-yellow-800';
-        case 'Processing': return 'bg-blue-100 text-blue-800';
-        case 'Completed': return 'bg-green-100 text-green-800';
-        default: return 'bg-gray-100 text-gray-800';
-      }
-    }
-
     function filterAndRender() {
       const search = searchInput.value.toLowerCase();
       const status = statusFilter.value;
-      const filtered = allOrders.filter(order =>
-        (!status || order.Status === status) &&
-        Object.values(order).some(val =>
-          String(val).toLowerCase().includes(search)
-        )
-      );
+      const filtered = allOrders.filter(order => {
+        const currentStatus = order.Status || 'Under review';
+        return (!status || currentStatus === status) &&
+          Object.values(order).some(val => String(val).toLowerCase().includes(search));
+      });
       renderTable(filtered);
     }
 
-    // Fetch and filter
     fetch(apiEndpoint)
       .then(res => res.json())
       .then(data => {
         allOrders = data.filter(order => order.MemberID === memberId);
+        skeleton.classList.add('hidden');
+        tableWrapper.classList.remove('hidden');
         renderTable(allOrders);
       });
 
